src/widgets/snapshots/tvision__widgets__indicator__tests__snapshot_dragging.snap
---
source: src/widgets/indicator.rs
expression: screen.snapshot()
---
size: 16x1
cursor: hidden
text:
|────── 3:5 ─────|
attr:
|aaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(10) bg=BIOS(1)
