src/widgets/snapshots/tvision__widgets__indicator__tests__snapshot_large_row_number.snap
---
source: src/widgets/indicator.rs
expression: screen.snapshot()
---
size: 16x1
cursor: hidden
text:
|══ 10000:1 ═════|
attr:
|aaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(15) bg=BIOS(1)
